# cpp-training-tuner

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Taskfile.yaml  requirements.lock.txt  requirements.txt  sonar-project.properties
.github/: workflow.yaml
.github/workflows/: simple-tuner-ci.yaml
modules/simple-tuner-core/: CMakeLists.txt
modules/simple-tuner-core-2/: CMakeLists.txt
modules/simple-tuner-core-2/src/: adder.cpp  adder.h  adder_test.cpp
modules/simple-tuner-core/src/: adder.cpp  adder.h  factorial.cpp  factorial.h  factorial_test.cpp
modules/simple-tuner-gui/: CMakeLists.txt
modules/simple-tuner-gui/src/: Main.cpp  MainComponent.cpp
